src/redisearch_rs/rune_trie_snapshots/tests/integration/snapshots/lex_contains_empty_pattern.snap
---
source: rune_trie_snapshots/tests/integration/contains_iteration.rs
expression: dump
---
size: 6

query: empty-prefix  str=""  prefix=true  suffix=false
  <no matches>
