src/redisearch_rs/rune_trie_snapshots/tests/integration/snapshots/lex_contains_pure_suffix.snap
---
source: rune_trie_snapshots/tests/integration/contains_iteration.rs
expression: dump
---
size: 6

query: ends-with "cat"  str="cat"  prefix=false  suffix=true
  cat         numDocs=1
  concat      numDocs=1
  scat        numDocs=1
