src/redisearch_rs/rune_trie_snapshots/tests/integration/snapshots/lex_incr_over_non_terminal_split.snap
---
source: rune_trie_snapshots/tests/integration/incr_mode.rs
expression: out
---
=== step 1: "apple" + "apply" — creates non-terminal "appl" ===
insert("apple", REPLACE, score=1, numDocs=1) -> OK_NEW
insert("apply", REPLACE, score=2, numDocs=1) -> OK_NEW
size: 2
entries:
  apple       score=1  numDocs=1
  apply       score=2  numDocs=1

=== step 2: INCR-insert "appl" — non-terminal becomes terminal ===
insert("appl", INCR, score=7, numDocs=3) -> OK_NEW
size: 3
entries:
  appl        score=7  numDocs=3
  apple       score=1  numDocs=1
  apply       score=2  numDocs=1
